--- a/Code/packages/repositories.config
+++ b/Code/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DealerDAL\packages.config" />
   <repository path="..\DealerWebsite\packages.config" />
 </repositories>
