--- a/Code/packages/repositories.config
+++ b/Code/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Dealer.UnitTests\packages.config" />
   <repository path="..\DealerDAL\packages.config" />
   <repository path="..\DealerWebsite\packages.config" />
 </repositories>
