--- a/Code/DealerWebsite/DealerWebsite.csproj
+++ b/Code/DealerWebsite/DealerWebsite.csproj
@@ -262,12 +262,11 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Layouts\Default\_wideLayout.cshtml" />
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Navigation\MainNav.cshtml" />
-    <Content Include="Views\Layouts\Default\_asideLayout.cshtml" />
+    <Content Include="Views\Layouts\Default\Layout.cshtml" />
     <Content Include="Views\Inventory\Index.cshtml" />
     <Content Include="Views\Services\Index.cshtml" />
     <Content Include="Views\Inventory\Category.cshtml" />
@@ -280,6 +279,7 @@
     <Content Include="Views\Shared\_footer.cshtml" />
     <Content Include="Views\Shared\_themeReference.cshtml" />
     <Content Include="Views\Shared\_copyright.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
